--- a/docroot/themes/custom/atg/templates/products/single.html.twig
+++ b/docroot/themes/custom/atg/templates/products/single.html.twig
@@ -147,42 +147,37 @@
         'product_category': product.product_category,
         'product_line': product.product_line,
         'product_line_ids': product.product_line_ids
-    }) %}
-    {% set relatedProducts = getRelatedProducts(criteria, productName)|json_decode(true) %}
-
-    {% if relatedProducts.hits is defined %}
-        {% if relatedProducts.hits|length > 1 %}
-            <section class="section">
-                <header class="section-header">
-                    <div class="section-header-content">
-                        <h2 class="section-title">{{ '<em>Related</em> Products' | t }}</h2>
-                    </div>
-                </header>
-
-                <ul class="listings">
-
-                    {# Get correct alias based on selected language #}
-                   {#} {% set alias = alias_by_path('/products/product-catalog', locale.code) %}
-
-                    {% for related in relatedProducts.hits %}
-                        {% if related._source.name != productName %}
-                            <li class="listings-item">
-                                {% set data = related._source %}
-                                {% include '@atg/patterns/listing.html.twig' with {
-                                    title: data.name,
-                                    body: data.values.sku_overview,
-                                    url: locale.path ~ alias ~ '/' ~ data.slug,
-                                    size: 'large',
-                                    image: (data.assets is not empty) ? step_asset(data.assets) : ''
-                                } %}
-                            </li>
-                        {% endif %}
-                    {% endfor %}
-                </ul>
-            </section>
-        {% endif %}
-    {% endif %}#}
-
+    }) %}#}
+    {% set relatedProducts = product.related_products %}
+    {% if relatedProducts is defined %}
+      {% if relatedProducts|length > 1 %}
+        <section class="section">
+          <header class="section-header">
+            <div class="section-header-content">
+              <h2 class="section-title">{{ '<em>Related</em> Products'|t }}</h2>
+            </div>
+          </header>
+          <ul class="listings">
+            {# Get correct alias based on selected language #}
+            {% set alias = alias_by_path('/products/product-catalog', locale.code) %}
+            {% for related in relatedProducts %}
+              {% if related._source.name != productName %}
+                <li class="listings-item">
+                  {% set data = related._source %}
+                  {% include '@atg/patterns/listing.html.twig' with {
+                      title: data.name,
+                      body: data.values.sku_overview,
+                      url: locale.path ~ alias ~ '/' ~ data.slug.0,
+                      size: 'large',
+                      image: (data.assets is not empty) ? step_asset(data.assets) : ''
+                  } %}
+                </li>
+              {% endif %}
+            {% endfor %}
+          </ul>
+        </section>
+      {% endif %}
+    {% endif %}
     <section class="section">
          {{ drupal_region('product_detail_page_callouts') }}
     </section>
