--- a/docroot/themes/custom/cleco/src/scss/_hacks.scss
+++ b/docroot/themes/custom/cleco/src/scss/_hacks.scss
@@ -42,6 +42,7 @@
   .basic-cards > div {
     display: inline-flex;
     flex-direction: row-reverse;
+    min-width: 100%;
   }
 
   .basic-cards > div > div {
