[APEX-406] Slug uniquiness, featured block img fix and add parent category to product category in index

--- a/docroot/themes/custom/atg/templates/paragraphs/paragraph--featured-products.html.twig
+++ b/docroot/themes/custom/atg/templates/paragraphs/paragraph--featured-products.html.twig
@@ -33,9 +33,9 @@
 
                 {% set url  = baseUrl ~ item.field_slug.value %}
 
-                {% set img = item.field_360_image.0.entity.field_360_loading_image|file_url|image_style('product_thumb') %}
+                {% set img = item.field_360_image.0.entity.field_360_loading_image|file_uri|image_style('product_thumb') %}
                 {% if not img %}
-                  {% set img = item.field_media|file_url|image_style('product_thumb') %}
+                  {% set img = item.field_media|file_uri|image_style('product_thumb') %}
                 {% endif %}
 
     				<li class="listings-item">
