--- a/docroot/themes/custom/gearwrench/templates/node/node--product--full.html.twig
+++ b/docroot/themes/custom/gearwrench/templates/node/node--product--full.html.twig
@@ -69,7 +69,7 @@
  */
 #}
 {% set classes = [] %}
-
+<!-- {{ kint('hello world') }} -->
 <article{{ attributes.addClass(classes) }}>
   {{ title_prefix }}
   {% if not page %}
@@ -209,8 +209,15 @@
               <div class="node--type-product__accordion-content-header">
                 {{ 'Specifications'|t }}
               </div>
-
-              {{ content.field_product_specifications }}
+              {% autoescape false %}
+                {% for key,specification in field_product_specifications %}
+                  <div class="field__item">{{key}} :
+                    {% for items in specification %}
+                      <span>{{ (':' in items) ? items|nl2br : items }}</span><br/>
+                    {% endfor %}
+                  </div>
+                {% endfor %}
+              {% endautoescape  %}
             </div>
           </section>
 
