--- a/docroot/themes/custom/atg/templates/products/single.html.twig
+++ b/docroot/themes/custom/atg/templates/products/single.html.twig
@@ -115,7 +115,7 @@
                     <ul class="listings">
                         {% set downloadTypes = getDownloadTypes() %}
                         {% for asset in product.assets %}
-                            {% if asset.type in downloadTypes|keys %}
+                          {% if asset.type != 'Primary Image' %}
                                 {% set hasDownloads = true %}
                                 <li class="listings-item">
                                     {% set url = '#' %}
