--- a/docroot/themes/custom/atg/templates/products/single.html.twig
+++ b/docroot/themes/custom/atg/templates/products/single.html.twig
@@ -10,8 +10,8 @@
                         {% for index, asset in product.assets | sort_assets %}
                             {% set zoomable = step_asset([asset], 'source_to_jpg', 'large') %}
                             {% set thumb = step_asset([asset], 'source_to_jpg', 'product_zoom_thumb') %}
-                            <carousel-item id="carousel-{{ index }}" thumb="{{ product.product_image }}" class="product-hero-media-item">
-                                <zoomable src="{{ product.product_image }}" full="{{ product.product_image }}" alt="Product image"></zoomable>
+                            <carousel-item id="carousel-{{ index }}" thumb="{{ asset.source_to_jpg }}" class="product-hero-media-item">
+                                <zoomable src="{{ asset.source_to_jpg }}" full="{{ asset.source_to_jpg }}" alt="Product image"></zoomable>
                             </carousel-item>
                         {% endfor %}
                     </carousel>
