Apex-500: Model specification table issue has been fixed.

--- a/docroot/themes/custom/cleco/src/scss/components/_comparison-table.scss
+++ b/docroot/themes/custom/cleco/src/scss/components/_comparison-table.scss
@@ -18,6 +18,12 @@
     tr.is-selected {
       background: rgba($color-gray-light, 0.16);
     }
+
+    td {
+      span {
+        display: block;
+      }
+    }
   }
 
   // Shrink checkbox column
