Apex-505: Request a quote form Success message issue has been fixed.

--- a/docroot/themes/custom/cleco/src/scss/components/_forms.scss
+++ b/docroot/themes/custom/cleco/src/scss/components/_forms.scss
@@ -33,3 +33,8 @@
 .webform-element--title-inline > label {
     display: block;
 }
+
+.webform-submission-request-a-quote-form {
+    opacity: 1 !important;
+}
+
