--- a/docroot/themes/custom/atg/templates/paragraphs/paragraph--featured-products.html.twig
+++ b/docroot/themes/custom/atg/templates/paragraphs/paragraph--featured-products.html.twig
@@ -1,8 +1,12 @@
 {# @todo need figure out way to get pure values instead of all the additional keys, hence the #id conditional #}
 {% set featured_products = [] %}
-{% for key,product in content.field_featured_products_list  %}
-     {% if product['#options']['entity'] is defined %}
-        {% set featured_products = featured_products|merge([product['#options']['entity']]) %}
+{% set product_title_overrides = [] %}
+{% set product_url_overrides = [] %}
+{% for key,product in content.field_featured_product  %}
+     {% if product['#paragraph'] is defined %}
+        {% set featured_products = featured_products|merge([product['#paragraph'].field_product.entity]) %}
+        {% set product_title_overrides = product_title_overrides|merge([product['#paragraph'].field_title.value]) %}
+       {% set product_url_overrides = product_url_overrides|merge([product['#paragraph'].field_link.value]) %}
     {% endif %}
 {% endfor %}
 
@@ -23,6 +27,9 @@
                 {% if not name %}
                   {% set name = item.title.value %}
                 {% endif %}
+                {% if product_title_overrides[index] %}
+                  {% set name = product_title_overrides[index] %}
+                {% endif %}
 
                 {% set body = item.field_features_copy.value %}
                 {% if not body %}
@@ -32,6 +39,9 @@
                 {% set body = null %}
 
                 {% set url  = baseUrl ~ item.field_slug.value %}
+                {% if product_url_overrides[index] %}
+                  {% set url = product_url_overrides[index] %}
+                {% endif %}
 
                 {% set img = item.field_360_image.0.entity.field_360_loading_image|file_uri|image_style('product_thumb') %}
                 {% if not img %}
