--- a/docroot/themes/custom/sata/templates/node/node--media-page--full.html.twig
+++ b/docroot/themes/custom/sata/templates/node/node--media-page--full.html.twig
@@ -88,10 +88,18 @@
       <div class="node__summary">
         {{ summary }}
       </div>
-      {% if file is not null %}
+      {% if result == "/media-center/ferramentas-manuais/catalogo-sata-belzer-sata" %}
+        {% if file is not null %}
         <div class="node__cta">
-          <a href="{{ file }}" target="_blank">{{ 'Download'|t }} {{ mediaType }}</a>
+          <a href="{{ file }}" target="_blank">{{ 'BAIXAR'|t }} {{ brazilmediaType }}</a>
         </div>
+      {% endif %}
+      {% else %}
+         {% if file is not null %}
+          <div class="node__cta">
+            <a href="{{ file }}" target="_blank">{{ 'Download'|t }} {{ mediaType }}</a>
+          </div>
+        {% endif %}
       {% endif %}
       <div class="node__categories">
         {{ categories }}
