Adding-host-condition

--- a/docroot/themes/custom/sata/templates/node/node--media-page--full.html.twig
+++ b/docroot/themes/custom/sata/templates/node/node--media-page--full.html.twig
@@ -69,6 +69,7 @@
  */
 #}
 {% set classes = [] %}
+{% set sata_brazil_host = ['https://sata-brazil-local.ddev.site/', 'https://stg-www.sataferramentas.com.br/'] %}
 
 <article{{ attributes.addClass(classes) }}>
   <div class="node__top-content">
@@ -88,7 +89,7 @@
       <div class="node__summary">
         {{ summary }}
       </div>
-      {% if result == "/media-center/ferramentas-manuais/catalogo-sata-belzer-sata" %}
+      {% if (host in ["https://sata-brazil-local.ddev.site", "https://sataferramentas.com.br", "https://stg-www.sataferramentas.com.br"]) and (mediaType == 'Catalog') %}
         {% if file is not null %}
         <div class="node__cta">
           <a href="{{ file }}" target="_blank">{{ 'BAIXAR'|t }} {{ brazilmediaType }}</a>
