--- a/docroot/themes/custom/sata/templates/node/node--media-page--full.html.twig
+++ b/docroot/themes/custom/sata/templates/node/node--media-page--full.html.twig
@@ -92,7 +92,7 @@
       {% if (host in ["https://sata-brazil-local.ddev.site", "https://sataferramentas.com.br", "https://stg-www.sataferramentas.com.br"]) and (mediaType == 'Catalog') %}
         {% if file is not null %}
         <div class="node__cta">
-          <a href="{{ file }}" target="_blank">{{ 'BAIXAR'|t }} {{ brazilmediaType }}</a>
+          <a href="{{ file }}" target="_blank">{{ 'BAIXAR'|t }}</a>
         </div>
       {% endif %}
       {% else %}
