APEX-507: Changed template files as per prod

--- a/docroot/themes/custom/atg/templates/includes/header.html.twig
+++ b/docroot/themes/custom/atg/templates/includes/header.html.twig
@@ -10,7 +10,7 @@
   <div class="masthead-primary" v-masthead-search>
     <div class="masthead-branding">
       <a href="{{ url('<front>') }}" class="logo x">
-        {{ svg('dist/img/atgtools-logo.svg') }}
+        {{ svg('dist/img/clecotools-logo.svg') }}
       </a>
     </div>
 
