--- a/docroot/themes/custom/atg/templates/includes/footer.html.twig
+++ b/docroot/themes/custom/atg/templates/includes/footer.html.twig
@@ -9,7 +9,7 @@
 <footer class="footer">
   <div class="footer-branding">
     <a href="{{ get_locale().path is not empty ? get_locale().path : '/' }}" class="logo">
-      {{ svg('dist/img/atgtools-logo.svg') }}
+      {{ svg('dist/img/clecotools-logo.svg') }}
     </a>
     {% if current_language.id == 'en' %}
         <div>
