--- a/source/themes/custom/apextoolgroup/styles/base/_variables.scss
+++ b/source/themes/custom/apextoolgroup/styles/base/_variables.scss
@@ -5,6 +5,7 @@ $black: #111111;
 $aluminium: #8C8B8B;
 $aluminium-dark: #8E8E8E;
 $nickel: #737373;
+$neon-silver: #CFCFCF;
 $celtic-blue: #3A75C4;
 $neon-tangerine: #EF8903;
 $persimmon: #E55204;
@@ -14,6 +15,15 @@ $fulvous: #E38A15;
 
 /****** fonts ******/
 $nacelle: 'Nacelle', sans-serif;
+
+/****** font size ******/
+$h1: 40px;
+$h2: 24px;
+$h3: 22px;
+$h4: 20px;
+$h5: 18px;
+$h6: 16px;
+$p: 16px;
 
 /****** font weight ******/
 $bold: bold;
