--- a/source/themes/custom/apextoolgroup/styles/base/_typography.scss
+++ b/source/themes/custom/apextoolgroup/styles/base/_typography.scss
@@ -29,37 +29,37 @@ body {
 
 .h1,
 h1 {
-  font-size: 40px;
+  font-size: $h1;
   font-weight: $semi-bold;
 }
 
 .h2,
 h2 {
-  font-size: 26px;
+  font-size: $h2;
   font-weight: $semi-bold;
 }
 
 .h3,
 h3 {
-  font-size: 24px;
+  font-size: $h3;
   font-weight: $semi-bold;
 }
 
 .h4,
 h4 {
-  font-size: 22px;
+  font-size: $h4;
   font-weight: $semi-bold;
 }
 
 .h5,
 h5 {
-  font-size: 20px;
+  font-size: $h5;
   font-weight: $semi-bold;
 }
 
 .h6,
 h6 {
-  font-size: 18px;
+  font-size: $h6;
   font-weight: $semi-bold;
 }
 
