bugfix/APEX-525-Issues-in-product-section-in-all-solutions-page fix the issues.

--- a/docroot/themes/custom/atg/templates/paragraphs/paragraph--featured-products.html.twig
+++ b/docroot/themes/custom/atg/templates/paragraphs/paragraph--featured-products.html.twig
@@ -31,9 +31,13 @@
                   {% set name = product_title_overrides[index] %}
                 {% endif %}
 
-                {% set body = item.field_features_copy.value %}
-                {% if not body %}
-                  {% set body = item.body.value %}
+                {% if product_title_overrides[index] %}
+                  {% set body = null %}
+                {% else %}
+                  {% set body = item.field_features_copy.value %}
+                  {% if not body %}
+                    {% set body = item.body.value %}
+                  {% endif %}
                 {% endif %}
 
                 {% set url  = baseUrl ~ item.field_slug.value %}
