APEX-264: Homepage slider implementation

--- a/source/themes/custom/apextoolgroup/styles/base/_variables.scss
+++ b/source/themes/custom/apextoolgroup/styles/base/_variables.scss
@@ -9,6 +9,7 @@ $neon-silver: #CFCFCF;
 $celtic-blue: #3A75C4;
 $neon-tangerine: #EF8903;
 $persimmon: #E55204;
+$blizzard-blue: #4DC0E8;
 // Button hover colors.
 $pale-aqua: #D9E8FC;
 $fulvous: #E38A15;
