--- a/source/themes/custom/apextoolgroup/styles/components/_header.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_header.scss
@@ -345,6 +345,7 @@
 
 .search-wrap {
   background-color: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(13px);
   position: absolute;
   width: 100%;
   left: 0;
