--- a/source/themes/custom/apextoolgroup/styles/base/_button.scss
+++ b/source/themes/custom/apextoolgroup/styles/base/_button.scss
@@ -1,3 +1,10 @@
+button {
+  &:focus,
+  &:focus-visible {
+    outline: 0;
+  }
+}
+
 // Primary Button.
 .btn-primary {
   display: flex;
@@ -31,12 +38,35 @@
   min-width: 182px;
   color: $celtic-blue;
   border: solid 1px $celtic-blue;
-  background-color: $white;
+  background-color: transparent;
 
   &:hover,
   &:focus,
   &:focus-visible {
-    background-color: $pale-aqua;
+    background-color: transparent;
     border-color: $pale-aqua;
+  }
+}
+
+// Secondary Button White.
+.btn-secondary-white {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  line-height: 20px;
+  padding: 16px 24px;
+  min-width: 182px;
+  color: $white;
+  border: solid 1px $white;
+  background-color: transparent;
+
+  &:hover,
+  &:focus,
+  &:focus-visible {
+    background-color: $white;
+    border-color: $white;
+    color: $celtic-blue;
   }
 }
