--- a/source/themes/custom/apextoolgroup/styles/base/_layout.scss
+++ b/source/themes/custom/apextoolgroup/styles/base/_layout.scss
@@ -26,6 +26,14 @@ body.user-logged-in {
   }
 }
 
+.container-fluid {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
 *, 
 ::after,
 ::before {
