--- a/source/themes/custom/apextoolgroup/styles/base/_typography.scss
+++ b/source/themes/custom/apextoolgroup/styles/base/_typography.scss
@@ -31,6 +31,12 @@ body {
 h1 {
   font-size: $h1;
   font-weight: $semi-bold;
+  line-height: 56px;
+  text-transform: uppercase;
+  @media only screen and (max-width: $tablet) {
+    font-size: 24px;
+    line-height: 34px;
+  }
 }
 
 .h2,
@@ -64,8 +70,8 @@ h6 {
 }
 
 p {
-  font-size: 16px;
-  line-height: 22px;
+  font-size: $p;
+  line-height: 25.2px;
 }
 
 a {
@@ -80,8 +86,8 @@ ul {
   padding-left: 0;
 
   li {
-    font-size: 13px;
-    line-height: 1.5;
+    font-size: $p;
+    line-height: 25.2px;
   }
 }
 
