--- a/source/themes/custom/apextoolgroup/styles/components/_footer.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_footer.scss
@@ -35,7 +35,7 @@ footer {
     margin-bottom: 0;
     @media only screen and (min-width: $tablet)  {
       position: absolute;
-      right: 0;
+      right: 15px;
       bottom: 0;
       text-align: right;
     }
