APEX-264: added the sub heading.

--- a/docroot/themes/custom/apextoolgroup/templates/views/views-view-fields--homepage_slider--slider-images.html.twig
+++ b/docroot/themes/custom/apextoolgroup/templates/views/views-view-fields--homepage_slider--slider-images.html.twig
@@ -7,9 +7,10 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-11 col-lg-7">
-          <h1>{{ fields.title.content }}</h1>
-          {{ fields.body.content }}
-          <a href="{{ fields.field_slider_link.content|render|trim|striptags }}" class="btn-secondary-white">{{ fields.field_slider_link_1.content }}</a>
+          {% if fields.title.content %}<h1>{{ fields.title.content }}</h1>{% endif %}
+          {% if fields.field_footer_note.content %}<h6>{{ fields.field_footer_note.content }}</h6>{% endif %}
+          {% if fields.body.content %}{{ fields.body.content }}{% endif %}
+          {% if fields.field_slider_link_1.content %}<a href="{{ fields.field_slider_link.content|render|trim|striptags }}" class="btn-secondary-white">{{ fields.field_slider_link_1.content }}</a>{% endif %}
         </div>
         <div class="content-overlay">&nbsp;</div>
       </div>
