--- a/source/themes/custom/apextoolgroup/styles/components/_footer.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_footer.scss
@@ -2,6 +2,7 @@
 footer {
   background-color: $white;
   padding: 40px 0;
+  box-shadow: 0 -6px 20px -10px rgba(0, 0, 0, 0.25);
 
   h2 {
     font-size: 14px;
