--- a/source/themes/custom/apextoolgroup/styles/components/_homepage-Slider.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_homepage-Slider.scss
@@ -15,9 +15,6 @@
       width: 100%;
       height: 480px;
       overflow: hidden;
-      @media only screen and (max-width: $tablet) {
-        height: 580px;
-      }
 
       img {
         width: 100%;
@@ -75,8 +72,19 @@
       }
 
       p {
-        width: 90%;
         margin-bottom: 2rem;
+        @media only screen and (min-width: $tablet) {
+          width: 90%;
+        }
+      }
+
+      h6 {
+        margin: 0;
+
+        p {
+          margin: 0;
+          color: $blizzard-blue;
+        }
       }
     }
 
