--- a/source/themes/custom/apextoolgroup/styles/base/_typography.scss
+++ b/source/themes/custom/apextoolgroup/styles/base/_typography.scss
@@ -38,6 +38,15 @@ h1 {
   }
 }
 
+img {
+  margin: 0;
+  padding: 0;
+  width: auto;
+  height: auto;
+  display: block;
+  max-width: 100%;
+}
+
 .h2,
 h2 {
   font-size: $h2;
