APEX-235: Market landing page theming

--- a/source/themes/custom/apextoolgroup/styles/components/_header.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_header.scss
@@ -7,7 +7,7 @@
 
 .header-wrapper {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   width: 100%;
   @media only screen and (max-width: $tablet-max)  {
     padding: 15px 0;
