--- a/source/themes/custom/apextoolgroup/styles/components/_homepage-Slider.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_homepage-Slider.scss
@@ -7,6 +7,10 @@
   &__item {
     position: relative;
 
+    h1 {
+      text-transform: uppercase;
+    }
+
     .image {
       width: 100%;
       height: 480px;
