--- a/source/themes/custom/apextoolgroup/styles/components/_market-details.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_market-details.scss
@@ -13,6 +13,10 @@
   .field--name-body {
     p {
       margin: 0 0 16px;
+
+      a {
+        text-decoration: underline;
+      }
     }
   }
 }
