--- a/source/themes/custom/apextoolgroup/styles/base/_typography.scss
+++ b/source/themes/custom/apextoolgroup/styles/base/_typography.scss
@@ -30,21 +30,12 @@ body {
 .h1,
 h1 {
   font-size: $h1;
-  font-weight: $semi-bold;
+  font-weight: $normal;
   line-height: 56px;
   @media only screen and (max-width: $tablet) {
     font-size: 24px;
     line-height: 34px;
   }
-}
-
-img {
-  margin: 0;
-  padding: 0;
-  width: auto;
-  height: auto;
-  display: block;
-  max-width: 100%;
 }
 
 .h2,
@@ -98,3 +89,5 @@ ul {
     line-height: 25.2px;
   }
 }
+
+
