Apex-00: Enhanced product features section icon color issue fix.

--- a/docroot/themes/custom/cleco/src/scss/pages/enhanced-product/_enhanced-product.scss
+++ b/docroot/themes/custom/cleco/src/scss/pages/enhanced-product/_enhanced-product.scss
@@ -714,3 +714,23 @@ html[lang="de"] {
     }
   }
 }
+
+.enhanced-product {
+  .section--product-features {
+    .contain {
+      .product-features-copy {
+        .features-nav {
+          button {
+            svg {
+              fill: $color-blue !important;
+
+              path {
+                fill: $color-blue !important;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
