--- a/docroot/themes/custom/apextoolgroup/templates/views/views-view-fields--market_other_blocks.html.twig
+++ b/docroot/themes/custom/apextoolgroup/templates/views/views-view-fields--market_other_blocks.html.twig
@@ -1,4 +1,6 @@
-<a href="{{fields.view_node.content}}">
+
+{% set view_node = fields.view_node.content|render|trim|striptags %}
+<a href="{{view_node}}">
   {{ fields.title.content }}
 </a>
 
