--- a/docroot/themes/custom/apextoolgroup/templates/block/block--fixed-block-content--warranty-block.html.twig
+++ b/docroot/themes/custom/apextoolgroup/templates/block/block--fixed-block-content--warranty-block.html.twig
@@ -29,7 +29,8 @@
   set classes = [
     'block',
     'block-' ~ configuration.provider|clean_class,
-    'block-' ~ plugin_id|clean_class
+    'block-' ~ plugin_id|clean_class,
+    'cta-full'
   ]
 %}
 
@@ -40,8 +41,10 @@
   {% endif %}
   {{ title_suffix }}
   {% block content %}
-    <div class="container-fluid">
-      {{ content }}
+    <div class="container">
+      {% if content.field_title %}<h1>{{ content.field_title.0 }}</h1>{% endif %}
+      {{ content.body.0 }}
+      <a href="{{ content.field_link.0['#url'] }}" class="btn-secondary-white">{{ content.field_link.0['#title'] }}</a>
     </div>
   {% endblock %}
 </div>
