--- a/source/themes/custom/apextoolgroup/styles/components/_footer.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_footer.scss
@@ -4,6 +4,10 @@ footer {
   padding: 40px 0;
   box-shadow: 0 -6px 20px -10px rgba(0, 0, 0, 0.25);
 
+  &.hide-content {
+    display: none;
+  }
+
   h2 {
     font-size: 14px;
     line-height: 20px;
