--- a/docroot/themes/custom/apextoolgroup/templates/node/node--page--full.html.twig
+++ b/docroot/themes/custom/apextoolgroup/templates/node/node--page--full.html.twig
@@ -76,26 +76,6 @@
   ]
 %}
 
-<div class="hero-banner">
-  {{ content.field_banner_image }}
-
-{% if node.label or content.field_short_description.0 %}
-  <div class="hero-banner__caption">
-    <div class="container">
-      <h1 class="hero-banner__title">
-        {{ node.label }}
-      </h1>
-
-      <div class="hero-banner__description">
-        {{ content.field_short_description.0 }}
-      </div>
-    </div>
-  </div>
-  {% endif %}
-</div>
-
 <div class="container">
-  <div class="market-details">
-    {{ content.body }}
-  </div>
+  {{ content }}
 </div>
