--- a/source/themes/custom/apextoolgroup/styles/base/_typography.scss
+++ b/source/themes/custom/apextoolgroup/styles/base/_typography.scss
@@ -81,6 +81,48 @@ a {
   transition: .2s ease-out;
 }
 
+.text-formatted {
+  a {
+    text-decoration: underline;
+  }
+
+  strong {
+    margin: 0;
+    padding: 0;
+    color: $black;
+    font-weight: 700;
+  }
+
+  > ul {
+    padding: 0;
+    margin: 0 0 18px 15px;
+
+    @media only screen and(max-width: $tablet) {
+      margin: 0 0 16px 15px;
+    }
+
+    > li {
+      padding: 0;
+      margin: 0 0 10px;
+      list-style: disc;
+
+      > ul {
+        margin: 18px 0 18px 25px;
+
+        @media only screen and(max-width: $tablet) {
+          margin: 16px 0 16px 20px;
+        }
+
+        > li {
+          padding: 0;
+          margin: 0 0 10px;
+          list-style: circle;
+        }
+      }
+    }
+  }
+}
+
 ol,
 ul {
   list-style-type: none;
@@ -91,5 +133,3 @@ ul {
     line-height: 25.2px;
   }
 }
-
-
