--- a/source/themes/custom/apextoolgroup/styles/components/_privacy-policy.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_privacy-policy.scss
@@ -1,43 +1,11 @@
 .privacy-policy {
-  .main-contane {
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-    word-wrap: break-word;
-
-    @media only screen and (min-width: $tablet-max) {
-      max-width: 1140px;
-    }
-  }
-
   .block-page-title-block {
     width: 100%;
     height: 100%;
     display: block;
-
-    .page-title {
-      width: 100%;
-      height: 100%;
-      display: block;
-      margin: 50px 0 25px;
-    }
   }
 
   .field--name-body {
-    .privacy-policy-logo {
-      width: 100%;
-      margin: 0 auto;
-      @media only screen and(min-width: $tablet) {
-        width: 500px;
-      }
-
-      img {
-        width: 100%;
-        height: auto;
-      }
-    }
-
     a {
       text-decoration: underline;
     }
@@ -53,8 +21,17 @@
       font-weight: 700;
     }
 
-    p {
-      margin: 0 0 16px;
+    .privacy-policy-logo {
+      width: 100%;
+      margin: 0 auto !important;
+      @media only screen and(min-width: $tablet) {
+        width: 500px;
+      }
+
+      img {
+        width: 100%;
+        height: auto;
+      }
     }
 
     > ul {
