APEX-234: Brand timeline - theming

--- a/source/themes/custom/apextoolgroup/styles/components/_header.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_header.scss
@@ -444,6 +444,8 @@
 
 .main-contane {
   &.hide-content {
-    display: none;
+    @media only screen and (max-width: $tablet-max)  {
+      display: none;
+    }
   }
 }
