--- a/source/themes/custom/apextoolgroup/styles/components/_homepage.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_homepage.scss
@@ -51,6 +51,9 @@
         @media only screen and (min-width: $tablet) {
           width: 80%;
         }
+        @media only screen and (min-width: $tablet-max) {
+          width: 100%;
+        }
       }
     }
 
@@ -182,7 +185,7 @@
   }
 
   h2 {
-    font-weight: $normal;
+    font-weight: $light;
     line-height: 33.6px;
   }
 
@@ -264,7 +267,7 @@
     }
 
     h2 {
-      font-weight: $normal;
+      margin-top: 20px;
     }
 
     .date {
