--- a/source/themes/custom/apextoolgroup/styles/base/_typography.scss
+++ b/source/themes/custom/apextoolgroup/styles/base/_typography.scss
@@ -27,11 +27,28 @@ body {
   }
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  margin-top: 0;
+  margin-bottom: 20px;
+  font-weight: $normal;
+}
+
 .h1,
 h1 {
   font-size: $h1;
-  font-weight: $normal;
   line-height: 56px;
+  margin-bottom: 30px;
   @media only screen and (max-width: $tablet) {
     font-size: 24px;
     line-height: 34px;
@@ -41,27 +58,23 @@ h1 {
 .h2,
 h2 {
   font-size: $h2;
-  font-weight: $semi-bold;
   line-height: 29.05px;
 }
 
 .h3,
 h3 {
   font-size: $h3;
-  font-weight: $semi-bold;
 }
 
 .h4,
 h4 {
   font-size: $h4;
   line-height: 1.25;
-  font-weight: $semi-bold;
 }
 
 .h5,
 h5 {
   font-size: $h5;
-  font-weight: $semi-bold;
 }
 
 .h6,
@@ -73,6 +86,8 @@ h6 {
 p {
   font-size: $p;
   line-height: 25.2px;
+  margin-top: 0;
+  margin-bottom: 16px;
 }
 
 a {
