--- a/source/themes/custom/apextoolgroup/styles/base/_variables.scss
+++ b/source/themes/custom/apextoolgroup/styles/base/_variables.scss
@@ -10,6 +10,7 @@ $celtic-blue: #3A75C4;
 $neon-tangerine: #EF8903;
 $persimmon: #E55204;
 $blizzard-blue: #4DC0E8;
+$spanish-gray: #9E9E9E;
 // Button hover colors.
 $pale-aqua: #D9E8FC;
 $fulvous: #E38A15;
