--- a/source/themes/custom/apextoolgroup/styles/components/_footer.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_footer.scss
@@ -5,7 +5,9 @@ footer {
   box-shadow: 0 -6px 20px -10px rgba(0, 0, 0, 0.25);
 
   &.hide-content {
-    display: none;
+    @media only screen and (max-width: $tablet-max)  {
+      display: none;
+    }
   }
 
   h2 {
