APEX-265: Theming for social share block

--- a/source/themes/custom/apextoolgroup/styles/components/_footer.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_footer.scss
@@ -38,11 +38,14 @@ footer {
 
   .region-footer-third {
     margin-bottom: 0;
-    @media only screen and (min-width: $tablet)  {
-      position: absolute;
-      right: 15px;
-      bottom: 0;
-      text-align: right;
+
+    #block-copyrights {
+      @media only screen and (min-width: $tablet)  {
+        position: absolute;
+        right: 15px;
+        bottom: 0;
+        text-align: right;
+      }
     }
   }
 
@@ -52,6 +55,33 @@ footer {
       font-size: 10px;
       line-height: 14px;
       margin: 0;
+    }
+  }
+
+  .view-footer-social-block {
+    @media only screen and (min-width: $tablet)  {
+      margin: 20px 0 30px;
+    }
+
+    .view-content {
+      display: flex;
+      @media only screen and (min-width: $tablet)  {
+        justify-content: flex-end;
+      }
+    }
+
+    .views-row {
+      margin-right: 16px;
+      @media only screen and (min-width: $tablet-max)  {
+        margin-left: 16px;
+        margin-right: 0;
+      }
+
+      img {
+        width: 30px;
+        height: 30px;
+        object-fit: contain;
+      }
     }
   }
 }
