--- a/source/themes/custom/apextoolgroup/styles/components/_homepage.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_homepage.scss
@@ -193,18 +193,19 @@
   }
 
   .view-wrapper {
+    position: relative;
     display: flex;
-    width: 1040px;
+    width: 1100px;
     overflow-x: scroll;
     @media only screen and (max-width: $tablet-max) {
-      width: 720px;
+      width: 730px;
     }
     @media only screen and (max-width: $tablet) {
       width: 330px;
     }
 
     .views-row {
-      flex: 0 0 335px;
+      flex: 0 0 355px;
       margin-right: 16px;
       @media only screen and (max-width: $tablet-max) {
         flex: 0 0 350px;
