--- a/source/themes/custom/apextoolgroup/styles/base/_variables.scss
+++ b/source/themes/custom/apextoolgroup/styles/base/_variables.scss
@@ -11,6 +11,8 @@ $neon-tangerine: #EF8903;
 $persimmon: #E55204;
 $blizzard-blue: #4DC0E8;
 $spanish-gray: #9E9E9E;
+$platinum: #E4E3E3;
+$silver: #A5A5A5;
 // Button hover colors.
 $pale-aqua: #D9E8FC;
 $fulvous: #E38A15;
